Introduce simd::segmented_output_range
Takes a Range (as pair of iterators or actual range) and
turn it into a triplet of range describing the potential
prologue, main SIMD segment and epilogue of the original
Range. This "trichotomoy" is then usable to apply operations
on the different segment of the initial range - the first
non-SIMD segment, the SIMD segment and the final non-SIMD
segment- without to use complicated computations of boundaries.

--- a/test/api/iterator/CMakeLists.txt
+++ b/test/api/iterator/CMakeLists.txt
@@ -12,8 +12,8 @@ SET( SOURCES
     aligned_output_range.cpp
     input_range.cpp
     output_range.cpp
-    segmented_input_range.cpp
+#    realigned_input_range.cpp
     segmented_output_range.cpp
-   )
+  )
 
 make_unit( "api.iterator" ${SOURCES})
