Introduce simd::segmented_input_range
This range provides same facility than its output equivalent.

--- a/test/api/iterator/CMakeLists.txt
+++ b/test/api/iterator/CMakeLists.txt
@@ -12,7 +12,7 @@ SET( SOURCES
     aligned_output_range.cpp
     input_range.cpp
     output_range.cpp
-#    realigned_input_range.cpp
+    segmented_input_range.cpp
     segmented_output_range.cpp
   )
 
