--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -32,7 +32,7 @@ DOXYFILE_ENCODING      = UTF-8
 # title of most generated pages and in a few other places.
 # The default value is: My Project.
 
-PROJECT_NAME           = "bSIMD"
+PROJECT_NAME           = "Boost.SIMD"
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. This
 # could be handy for archiving the generated documentation or if some version
@@ -52,7 +52,6 @@ PROJECT_BRIEF          = "Flexible SIMD Programming"
 # the logo to the output directory.
 
 PROJECT_LOGO           =  "@Boost.SIMD_SOURCE_DIR@/doc/numscale.png"
-#PROJECT_LOGO           =  "/home/akelly/dev/bSIMDdoc/boost.simd/doc"
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) path
 # into which the generated documentation will be written. If a relative path is
 # entered, it will be relative to the location where doxygen was started. If
