--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -7,6 +7,7 @@
 ##===================================================================================================
 
 set ( SOURCES
+   basic.cpp
    insert.cpp
    store.cpp
    horner.cpp
