--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -1182,6 +1182,7 @@ HTML_EXTRA_STYLESHEET  = @Boost.SIMD_SOURCE_DIR@/doc/customdoxygen.css
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
 HTML_EXTRA_FILES       = @Boost.SIMD_SOURCE_DIR@/doc/doxy-boot.js
+HTML_EXTRA_FILES      += @Boost.SIMD_SOURCE_DIR@/doc/numscale_icon.png
 
 # The HTML_COLORSTYLE_HUE tag controls the color of the HTML output. Doxygen
 # will adjust the colors in the style sheet and background images according to
