--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -238,7 +238,9 @@ TAB_SIZE               = 4
 # newlines.
 
 # Concepts and links to boost documentation
-ALIASES =
+ALIASES = 
+ALIASES += notebox{1}="<table align=center width=90% class=\"table-striped \"> <tr><th><dl class=\"section note\"><dt>Note</dt><dd>\1</dd></dl> </table>"
+ALIASES += warningbox{1}="<table align=center width=90% class=\"table-striped \"> <tr><th><dl class=\"section warning\"><dt>Warning</dt><dd>\1</dd></dl> </table>"
 ALIASES += anchor{1}="<a name=\"\1\"></a>[[\1](#back\1)]:"
 ALIASES += refanchor{1}="<a name=\"back\1\"></a>[<sup>\1</sup>](#\1)"
 ALIASES += intconst="<a href=\"http://www.boost.org/doc/libs/release/libs/mpl/doc/refmanual/integral-constant.html\">Integral Constant</a>"
