--- a/.travis.yml
+++ b/.travis.yml
@@ -10,37 +10,188 @@ language: cpp
 
 matrix:
   include:
+##===================================================================================================
+## g++ 4.8 AVX Regression unit
     - os: linux
       compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.8']
-      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=regression
 
+## g++ 4.8 AVX Architecture unit
     - os: linux
       compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.8']
-      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=architecture
 
+## g++ 4.8 AVX API unit
     - os: linux
       compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9']
-      env: CXX_STD=11 TOOLSET=g++-4.9 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0
+          packages: ['g++-4.8']
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=api
 
+## g++ 4.8 AVX constant unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=constant
+
+## g++ 4.8 AVX function unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=function
+
+##===================================================================================================
+## g++ 4.8 SSE4 Regression unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=regression
+
+## g++ 4.8 SSE4 Architecture unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=architecture
+
+## g++ 4.8 SSE4 API unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=api
+
+## g++ 4.8 SSE4 constant unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=constant
+
+## g++ 4.8 SSE4 function unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-4.8']
+      env: CXX_STD=11 TOOLSET=g++-4.8 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=function
+
+##==================================================================================================
+## g++ 5 AVX Regression unit
     - os: linux
       compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-5']
-      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=regression
+
+## g++ 5 AVX Architecture unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=architecture
+
+## g++ 5 AVX API unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=api
+
+## g++ 5 AVX constant unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=constant
+
+## g++ 5 AVX function unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-mavx OPT=-ftrack-macro-expansion=0 TARGETS=function
+
+## g++ 5 SSE4 Regression unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=regression
+
+## g++ 5 SSE4 Architecture unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=architecture
+
+## g++ 5 SSE4 API unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=api
+
+## g++ 5 SSE4 constant unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=constant
+
+## g++ 5 SSE4 function unit
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-5']
+      env: CXX_STD=11 TOOLSET=g++-5 SIMD_EXT=-msse4.1 OPT=-ftrack-macro-expansion=0 TARGETS=function
 
 # Prepare build
 before_script:
@@ -52,17 +203,5 @@ before_script:
 # Build unit and run test
 script:
   - make update.boost-header-only | grep -v "^-- " # Silent installation
-  - make  -j 4 -k  regression.unit
-  - ctest -j 4 -R ^regression.*.unit
-  - make  -j 4 -k  api.unit
-  - ctest -j 4 -R ^api.*.unit
-  - make  -j 4 -k  architecture.unit
-  - ctest -j 4 -R ^architecture.*.unit
-  - make  -j 4 -k  function.simd.unit
-  - ctest -j 4 -R ^function.simd.*.unit
-  - make  -j 4 -k  constant.simd.unit
-  - ctest -j 4 -R ^constant.simd.*.unit
-  - make  -j 4 -k  function.scalar.unit
-  - ctest -j 4 -R ^function.scalar.*.unit
-  - make  -j 4 -k  constant.scalar.unit
-  - ctest -j 4 -R ^constant.scalar.*.unit
+  - make  -j 4 -k  $TARGETS.unit
+  - ctest -j 4 -R ^$TARGETS.*.unit
