--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -105,8 +105,6 @@ set(SOURCES
     fast.hypot.cpp
     fast.rec.cpp
     fast.rem.cpp
-    fast.rsqrt.cpp
-    fast.sqrt.cpp
     fast.trunc.cpp
     ffs.cpp
     firstbitset.cpp
@@ -287,6 +285,7 @@ set(SOURCES
 #    rrol.cpp
 #    rror.cpp
     rsqrt.cpp
+    rsqrt.fast.cpp
     safe_max.cpp
     safe_min.cpp
     sec.cpp
@@ -318,6 +317,7 @@ set(SOURCES
     sqr_s.cpp
     sqrt1pm1.cpp
     sqrt.cpp
+    sqrt.fast.cpp
     successor.cpp
     tan.cpp
     tand.cpp
