Reactivate eps(x) function

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -101,7 +101,7 @@ set ( SOURCES
    divides.saturated.cpp
    dot.cpp
    enumerate.cpp
-#   eps.cpp
+   eps.cpp
    erfc.cpp
    erf.cpp
    erfcx.cpp
