correcting is_included(_c) and changing names

--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -165,8 +165,8 @@ set(SOURCES
     is_greater_equal.cpp
     is_gtz.cpp
     is_imag.cpp
-    is_included_c.cpp
-    is_included.cpp
+    isincluded_c.cpp
+    isincluded.cpp
     is_inf.cpp
     is_invalid.cpp
     is_less.cpp
