--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ cmake_minimum_required(VERSION 2.8.7)
 
 ## Setup project
 ## -------------------------------------------------------------------------------------------------
-project(Boost.SIMD CXX)
+project(Boost.SIMD)
 set(PROJECT_VERSION 4.16.9.0) # TODO: Find a way to update this automatically
 set(PROJECT_DOC_DIR ${PROJECT_SOURCE_DIR}/doc)
 
