--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -10,14 +10,14 @@ add_subdirectory(div)
 add_subdirectory(rem)
 
 set ( SOURCES
-   abs.cpp
+   abs.regular.cpp
    abs.saturated.cpp
-   acos.cpp
+   acos.regular.cpp
    acos.accurate.cpp
-   acosd.cpp
+   acosd.regular.cpp
    acosd.accurate.cpp
    acosh.cpp
-   acospi.cpp
+   acospi.regular.cpp
    acospi.accurate.cpp
    acot.cpp
    acotd.cpp
@@ -93,11 +93,11 @@ set ( SOURCES
    cummin.cpp
    cumprod.cpp
    cumsum.cpp
-   dec.cpp
+   dec.regular.cpp
    dec.saturated.cpp
-   dist.cpp
+   dist.regular.cpp
    dist.saturated.cpp
-   divides.cpp
+   divides.regular.cpp
    divides.saturated.cpp
    dot.cpp
    enumerate.cpp
@@ -119,7 +119,7 @@ set ( SOURCES
    firstbitset.cpp
    firstbitunset.cpp
    floor.cpp
-   fma.cpp
+   fma.regular.cpp
    fma.conformant.cpp
    fms.cpp
    fnma.cpp
@@ -161,7 +161,7 @@ set ( SOURCES
    if_zero_else_one.cpp
    ilog2.cpp
    ilogb.cpp
-   inc.cpp
+   inc.regular.cpp
    inc.saturated.cpp
    indeg.cpp
    inearbyint.cpp
@@ -235,22 +235,22 @@ set ( SOURCES
    mantissa.cpp
    mask2logical.cpp
    max.cpp
-   maximum.cpp
+   maximum.regular.cpp
    maximum.splatted.cpp
    maxmag.cpp
    maxnum.cpp
    maxnummag.cpp
    meanof.cpp
    min.cpp
-   minimum.cpp
+   minimum.regular.cpp
    minimum.splatted.cpp
    minmag.cpp
    minmod.cpp
    minnum.cpp
    minnummag.cpp
-   minus.cpp
+   minus.regular.cpp
    modf.cpp
-   multiplies.cpp
+   multiplies.regular.cpp
    multiplies.saturated.cpp
    nbtrue.cpp
    nearbyint.cpp
@@ -263,9 +263,9 @@ set ( SOURCES
    nextpow2.cpp
    none.cpp
    nthroot.cpp
-   oneminus.cpp
+   oneminus.regular.cpp
    oneminus.saturated.cpp
-   plus.cpp
+   plus.regular.cpp
    plus.saturated.cpp
    popcnt.cpp
    pow2.cpp
@@ -323,7 +323,7 @@ set ( SOURCES
    sort.cpp
    splat.cpp
    sqr_abs.cpp
-   sqr.cpp
+   sqr.regular.cpp
    sqr.saturated.cpp
    sqrt1pm1.cpp
    sqrt.cpp
@@ -339,9 +339,9 @@ set ( SOURCES
    tanpi.cpp
    tenpower.cpp
    tofloat.cpp
-   toint.cpp
+   toint.regular.cpp
    toint.saturated.cpp
-   touint.cpp
+   touint.regular.cpp
    touint.saturated.cpp
    trunc.cpp
    two_add.cpp
@@ -350,7 +350,7 @@ set ( SOURCES
    two_split.cpp
    ulp.cpp
    ulpdist.cpp
-   unary_minus.cpp
+   unary_minus.regular.cpp
    unary_minus.saturated.cpp
    unary_plus.cpp
 )
