--- a/test/function/simd/rem/CMakeLists.txt
+++ b/test/function/simd/rem/CMakeLists.txt
@@ -7,7 +7,7 @@
 ##===================================================================================================
 
 set ( SOURCES
-   rem.cpp
+   rem.regular.cpp
    rem.ceil.cpp
    rem.floor.cpp
    rem.nearbyint.cpp
